--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "^2.4.3"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
